fix gap below welcome text on home page

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -254,7 +254,7 @@ body {
 }
 
 .WelcomeText {
-  margin: 4.5% 0 0% 0;
+  margin: 4.5% 0 3% 0;
   line-height: 1.5;
   display: flex;
   flex: 1;
